--- a/ProductService/src/main/resources/application.yml
+++ b/ProductService/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
     properties:
       hibernate:
         default_schema: productdb
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
