--- a/ProductService/src/main/resources/application.yml
+++ b/ProductService/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   application:
     name: product-service
-#  config:
-#    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+  config:
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:5432/online_store
     username: postgres
@@ -18,9 +18,9 @@ spring:
     properties:
       hibernate:
         default_schema: productdb
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
