--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,9 +4,8 @@ server:
 spring:
   application:
     name: order-service
-
-  #  config:
-  #    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+  config:
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:5432/online_store
     username: postgres
@@ -20,9 +19,9 @@ spring:
     properties:
       hibernate:
         default_schema: orderdb
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
