--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -19,9 +19,21 @@ spring:
     properties:
       hibernate:
         default_schema: orderdb
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    service-url:
-#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+  zipkin:
+    base-url: http://localhost:9411/
+    enabled: true
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: "prometheus,health,info"
+    prometheus:
+      enabled: true
+logging:
+  level:
+    io.micrometer.tracing: INFO
+
