--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8083
+  port: 8081
 spring:
   application:
-    name: product-service
+    name: payment-service
   config:
     import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
   datasource:
@@ -17,11 +17,4 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        default_schema: productdb
-  zipkin:
-    base-url: http://localhost:9411/
-    enabled: true
-
-
-
-
+        default_schema: paymentdb
