--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   application:
-    name: payment-service
+    name: PAYMENT-SERVICE
   config:
     import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
   datasource:
